// dysprime DBML - ERD v1.1 / FSD v1.3
// dbdiagram.io compatible

Project dysprime {
  database_type: 'PostgreSQL'
  Note: 'AI 기반 미대 입시 평가·코칭 플랫폼 (dysprime)'
}

// ========== Enums ==========
Enum grade_level {
  "고1"
  "고2"
  "고3"
  "재수"
  "N수"
}

Enum domain_type {
  "기초디자인"
  "기초소양"
}

Enum plan_type {
  Free
  Basic
  Premium
}

Enum analysis_status {
  pending
  layer1_complete
  layer2_complete
}

Enum time_limit_enum {
  "제한없음"
  "3시간"
  "4시간"
}

Enum art_grade_enum {
  A
  B
  C
  D
  E
  F
}

Enum fix_scope_type {
  StructureRebuild
  DetailTuning
}

Enum univ_line {
  TOP
  HIGH
  MID
  LOW
}

Enum message_role {
  user
  assistant
}

Enum payment_plan_type {
  Basic
  Premium
}

Enum payment_method_enum {
  card
  kakaopay
  naverpay
}

Enum payment_status_enum {
  success
  failed
  refund
}

// ========== Tables ==========
Table users {
  user_id varchar [pk, not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  nickname varchar [not null, unique]
  grade grade_level [not null]
  domain domain_type [not null]
  korean_grade integer [null]
  english_grade integer [null]
  art_grade integer [null]
  subscription_plan plan_type [not null, default: 'Free']
  remaining_credits integer [not null, default: 2, note: 'Rule 1: Concurrency Control Required. Must use Atomic Decrement / Transaction']
  subscription_started_at timestamp [null]
  next_billing_date timestamp [null]
  last_credit_reset_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (subscription_plan, created_at)
  }
}

Table analyses {
  analysis_id varchar [pk, not null]
  user_id varchar [not null, ref: > users.user_id]
  image_url varchar [not null]
  problem_text varchar [null]
  problem_image_url varchar [null]
  time_limit time_limit_enum [null]
  status analysis_status [not null, default: 'pending']
  scores jsonb [null, note: 'Layer 1 result. Object: density, shapePower, completion, coherence, thinking (each 0-100). Required when status=layer1_complete or layer2_complete.']
  total_score float [null]
  grade art_grade_enum [null]
  fix_scope fix_scope_type [null]
  embedding jsonb [null]
  university_predictions jsonb [null, note: 'Layer 2 result. Array of { universityName, department, line, probability [, similarStudentsCount ] }. NULL until status=layer2_complete.']
  layer1_completed_at timestamp [null]
  layer2_completed_at timestamp [null]
  created_at timestamp [not null]

  indexes {
    (user_id, created_at)
    (user_id, status, created_at)
  }
  Note: 'Rule 3: status determines nullability of scores/predictions. pending => both NULL; layer1_complete => scores NOT NULL, predictions NULL; layer2_complete => both NOT NULL.'
}

Table chat_sessions {
  session_id varchar [pk, not null]
  analysis_id varchar [not null, ref: > analyses.analysis_id]
  user_id varchar [not null, ref: > users.user_id]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (analysis_id, created_at)
  }
}

Table chat_messages {
  message_id varchar [pk, not null]
  session_id varchar [not null, ref: > chat_sessions.session_id]
  role message_role [not null]
  content text [not null]
  created_at timestamp [not null]

  indexes {
    (session_id, created_at)
  }
}

Table payments {
  payment_id varchar [pk, not null]
  user_id varchar [not null, ref: > users.user_id]
  amount integer [not null]
  plan payment_plan_type [not null]
  payment_method payment_method_enum [not null]
  status payment_status_enum [not null, default: 'success']
  paid_at timestamp [not null]

  indexes {
    (user_id, paid_at)
  }
}

// ========== Table Groups ==========
TableGroup User_Management {
  users
}

TableGroup Core_Service {
  analyses
  chat_sessions
  chat_messages
}

TableGroup Payment {
  payments
}
